--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                     <h3>Evolution Line</h3>
                     <div id="evolutionLine"></div>
                 </div>
-                <div id="typeDetails">
-
-                </div>
+                <div id="typeDetails"></div>
             </div>
         </section>
         <!-- pokemon Container -->
@@ -138,15 +136,11 @@
         <section id="comparePokemonContainer">
             <div class="firstPokemon">
                 <h3 id="firstPokemonName">Name</h3>
-                <div id="firstPokemonContainer">
-
-                </div>
+                <div id="firstPokemonContainer"></div>
             </div>
             <div class="secondPokemon">
                 <h3 id="secondPokemonName">Name</h3>
-                <div id="secondPokemonContainer">
-
-                </div>
+                <div id="secondPokemonContainer"></div>
             </div>
         </section>
         <!-- avout Container -->
@@ -162,9 +156,7 @@
                 </ul>
             </aside>
             <div id="gameAsideToggle">menu</div>
-            <div id="game-wrapper">
-
-            </div>
+            <div id="game-wrapper"></div>
         </section>
     </div>
 
