Your commit message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pokemon</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -153,6 +153,7 @@
                     <li id="quiz">Quiz</li>
                     <li id="cardShufle">type match</li>
                     <li id="mazeGame">Maze game</li>
+                    <li id="snakeGame">snake game</li>
                 </ul>
             </aside>
             <div id="gameAsideToggle">menu</div>
