--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                             </symbol>
                         </svg>
                     </div>
+                    <p id="pokemonCount"></p>
                     <div class="search">
                         <input type="text" placeholder="Search here" id="input">
                         <i class="fa-solid fa-magnifying-glass"></i>
