Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -37,173 +37,186 @@
           <i class="fa-solid fa-circle-half-stroke"></i>
         </button>
       </div>
-      <!---------------------------SEARCH CONTAINER------------------------------>
-      <section id="searchContainer">
-        <!---------------------------ASIDE BAR------------------------------>
-        <div id="searchWrapper">
-          <h3>Menu</h3>
-          <p id="legendary"><i class="fa-solid fa-crown"></i> Legendary</p>
-          <p id="evolutionButton">
-            <i class="fa-solid fa-code-branch"></i> Evolution Chains
-            <span>+</span>
-          </p>
-          <ul id="evolutionList">
-            <li id="singleStage">
-              <i class="fa-solid fa-circle"></i> Single Stage
-            </li>
-            <li id="doubleStage">
-              <i class="fa-solid fa-circle-dot"></i> Double Stage
-            </li>
-            <li id="tribleStage">
-              <i class="fa-solid fa-circle-nodes"></i> Trible Stage
-            </li>
-            <li id="branchedStage">
-              <i class="fa-solid fa-share-nodes"></i> Branched Stage
-            </li>
-          </ul>
-          <p id="megaButton"><i class="fa-solid fa-bolt"></i> Mega pokemon</p>
-          <p id="gigantamaxButton">
-            <i class="fa-solid fa-maximize"></i> Gigantamax
-          </p>
-          <p id="ramdonPokemon">
-            <i class="fa-solid fa-shuffle"></i> RamdonPokemon
-          </p>
-          <p id="searchPokemonContainer">
-            <i class="fa-solid fa-tags"></i> Types <span>+</span>
-          </p>
-          <ul id="searchPokemon"></ul>
-          <p id="sortedPokemonContainer">
-            <i class="fa-solid fa-sort"></i> Sort <span>+</span>
-          </p>
-          <ul id="sortedPokemon">
-            <li id="assending">
-              <p><i class="fa-solid fa-sort-up"></i> Ascending</p>
-            </li>
-            <li id="decending">
-              <p><i class="fa-solid fa-sort-down"></i> Descending</p>
-            </li>
-            <li id="ID">
-              <p><i class="fa-solid fa-hashtag"></i> ID</p>
-            </li>
-            <li id="power">
-              <p><i class="fa-solid fa-bolt"></i> Power</p>
-            </li>
-            <li id="exprence">
-              <p><i class="fa-solid fa-star"></i> Experience</p>
-            </li>
-          </ul>
-          <p id="basicStats">
-            <i class="fa-solid fa-chart-simple"></i> Basic Stats <span>+</span>
-          </p>
-          <ul id="basicStatsContainer">
-            <li id="hpBtn"><i class="fa-solid fa-heart"></i> HP</li>
-            <li id="attackBtn"><i class="fa-solid fa-hand-fist"></i> Attack</li>
-            <li id="defenseBtn"><i class="fa-solid fa-shield"></i> Defense</li>
-            <li id="specialAttackBtn">
-              <i class="fa-solid fa-wand-sparkles"></i> Special Attack
-            </li>
-            <li id="specialDefenseBtn">
-              <i class="fa-solid fa-shield-halved"></i> Special Defense
-            </li>
-            <li id="speedBtn"><i class="fa-solid fa-gauge-high"></i> Speed</li>
-          </ul>
-          <p id="ArceusForms">
-            <i class="fa-solid fa-dragon"></i> Arceus forms
-          </p>
-          <p id="powerInTypeContainer">
-            <i class="fa-solid fa-fire"></i> Power in Type <span>+</span>
-          </p>
-          <ul id="powerInType"></ul>
-          <p id="abilities">
-            <i class="fa-solid fa-book"></i> Abilities <span>+</span>
-          </p>
-          <ul id="abilitiesContainer"></ul>
-          <p id="moves">
-            <i class="fa-solid fa-person-running"></i> Moves <span>+</span>
-          </p>
-          <ul id="movesContainer"></ul>
-        </div>
-        <!---------------------------MAIN CONTAINER------------------------------>
-        <div class="cardContainer">
-          <div class="title">
-            <div id="asideMenuContainer">
-              <div class="nav">
-                <input type="checkbox" />
-                <svg>
-                  <use xlink:href="#menu" />
-                  <use xlink:href="#menu" />
-                </svg>
+      <div class="mainContainerWrapper">
+        <div class="mainContainer">
+          <!---------------------------SEARCH CONTAINER------------------------------>
+          <section id="searchContainer">
+            <!---------------------------ASIDE BAR------------------------------>
+            <div id="searchWrapper">
+              <h3>Menu</h3>
+              <p id="legendary"><i class="fa-solid fa-crown"></i> Legendary</p>
+              <p id="evolutionButton">
+                <i class="fa-solid fa-code-branch"></i> Evolution Chains
+                <span>+</span>
+              </p>
+              <ul id="evolutionList">
+                <li id="singleStage">
+                  <i class="fa-solid fa-circle"></i> Single Stage
+                </li>
+                <li id="doubleStage">
+                  <i class="fa-solid fa-circle-dot"></i> Double Stage
+                </li>
+                <li id="tribleStage">
+                  <i class="fa-solid fa-circle-nodes"></i> Trible Stage
+                </li>
+                <li id="branchedStage">
+                  <i class="fa-solid fa-share-nodes"></i> Branched Stage
+                </li>
+              </ul>
+              <p id="megaButton">
+                <i class="fa-solid fa-bolt"></i> Mega pokemon
+              </p>
+              <p id="gigantamaxButton">
+                <i class="fa-solid fa-maximize"></i> Gigantamax
+              </p>
+              <p id="ramdonPokemon">
+                <i class="fa-solid fa-shuffle"></i> RamdonPokemon
+              </p>
+              <p id="searchPokemonContainer">
+                <i class="fa-solid fa-tags"></i> Types <span>+</span>
+              </p>
+              <ul id="searchPokemon"></ul>
+              <p id="sortedPokemonContainer">
+                <i class="fa-solid fa-sort"></i> Sort <span>+</span>
+              </p>
+              <ul id="sortedPokemon">
+                <li id="assending">
+                  <p><i class="fa-solid fa-sort-up"></i> Ascending</p>
+                </li>
+                <li id="decending">
+                  <p><i class="fa-solid fa-sort-down"></i> Descending</p>
+                </li>
+                <li id="ID">
+                  <p><i class="fa-solid fa-hashtag"></i> ID</p>
+                </li>
+                <li id="power">
+                  <p><i class="fa-solid fa-bolt"></i> Power</p>
+                </li>
+                <li id="exprence">
+                  <p><i class="fa-solid fa-star"></i> Experience</p>
+                </li>
+              </ul>
+              <p id="basicStats">
+                <i class="fa-solid fa-chart-simple"></i> Basic Stats
+                <span>+</span>
+              </p>
+              <ul id="basicStatsContainer">
+                <li id="hpBtn"><i class="fa-solid fa-heart"></i> HP</li>
+                <li id="attackBtn">
+                  <i class="fa-solid fa-hand-fist"></i> Attack
+                </li>
+                <li id="defenseBtn">
+                  <i class="fa-solid fa-shield"></i> Defense
+                </li>
+                <li id="specialAttackBtn">
+                  <i class="fa-solid fa-wand-sparkles"></i> Special Attack
+                </li>
+                <li id="specialDefenseBtn">
+                  <i class="fa-solid fa-shield-halved"></i> Special Defense
+                </li>
+                <li id="speedBtn">
+                  <i class="fa-solid fa-gauge-high"></i> Speed
+                </li>
+              </ul>
+              <p id="ArceusForms">
+                <i class="fa-solid fa-dragon"></i> Arceus forms
+              </p>
+              <p id="powerInTypeContainer">
+                <i class="fa-solid fa-fire"></i> Power in Type <span>+</span>
+              </p>
+              <ul id="powerInType"></ul>
+              <p id="abilities">
+                <i class="fa-solid fa-book"></i> Abilities <span>+</span>
+              </p>
+              <ul id="abilitiesContainer"></ul>
+              <p id="moves">
+                <i class="fa-solid fa-person-running"></i> Moves <span>+</span>
+              </p>
+              <ul id="movesContainer"></ul>
+            </div>
+            <!---------------------------MAIN CONTAINER------------------------------>
+            <div class="cardContainer">
+              <div class="title">
+                <div id="asideMenuContainer">
+                  <div class="nav">
+                    <input type="checkbox" />
+                    <svg>
+                      <use xlink:href="#menu" />
+                      <use xlink:href="#menu" />
+                    </svg>
+                  </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+                    <symbol
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 100 56"
+                      id="menu"
+                    >
+                      <path
+                        d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4"
+                      />
+                    </symbol>
+                  </svg>
+                </div>
+                <p id="pokemonCount"></p>
+                <div class="search">
+                  <input type="text" placeholder="Search here" id="input" />
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
               </div>
-              <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-                <symbol
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 100 56"
-                  id="menu"
-                >
-                  <path
-                    d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4"
-                  />
-                </symbol>
-              </svg>
+              <div id="cards"></div>
+              <div id="evolutionContainer">
+                <button id="closeEvolutionBtn">X</button>
+                <h3>Evolution Line</h3>
+                <div id="evolutionLine"></div>
+              </div>
+              <div id="typeDetails"></div>
             </div>
-            <p id="pokemonCount"></p>
-            <div class="search">
-              <input type="text" placeholder="Search here" id="input" />
-              <i class="fa-solid fa-magnifying-glass"></i>
+          </section>
+          <!-- pokemon Container -->
+          <section id="pokemonDetailsContainer">
+            <div id="listContainer">
+              <h3>List</h3>
+              <hr />
+              <ul id="dataList"></ul>
+              <div id="sentinel"></div>
             </div>
-          </div>
-          <div id="cards"></div>
-          <div id="evolutionContainer">
-            <button id="closeEvolutionBtn">X</button>
-            <h3>Evolution Line</h3>
-            <div id="evolutionLine"></div>
-          </div>
-          <div id="typeDetails"></div>
+            <div class="cardsContainer">
+              <div class="navToggle">
+                <i class="fa-solid fa-arrow-left" id="previous"></i>
+                <h2 id="pokemonName"></h2>
+                <i class="fa-solid fa-arrow-right" id="next"></i>
+              </div>
+              <div class="cards" id="main"></div>
+            </div>
+          </section>
+          <!-- compare Container -->
+          <section id="comparePokemonContainer">
+            <div class="firstPokemon">
+              <h3 id="firstPokemonName">Name</h3>
+              <div id="firstPokemonContainer"></div>
+            </div>
+            <div class="secondPokemon">
+              <h3 id="secondPokemonName">Name</h3>
+              <div id="secondPokemonContainer"></div>
+            </div>
+          </section>
+          <!-- avout Container -->
+          <section id="aboutContainer"></section>
+          <section id="gameContainer">
+            <aside id="gameAside">
+              <h3>Games</h3>
+              <ul>
+                <li id="quiz">Quiz</li>
+                <li id="cardShufle">type match</li>
+                <li id="mazeGame">Maze game</li>
+                <li id="snakeGame">snake game</li>
+              </ul>
+            </aside>
+            <div id="gameAsideToggle">menu</div>
+            <div id="game-wrapper"></div>
+          </section>
         </div>
-      </section>
-      <!-- pokemon Container -->
-      <section id="pokemonDetailsContainer">
-        <div id="listContainer">
-          <h3>List</h3>
-          <hr />
-          <ul id="dataList"></ul>
-          <div id="sentinel"></div>
-        </div>
-        <div class="cardsContainer">
-          <div class="navToggle">
-            <i class="fa-solid fa-arrow-left" id="previous"></i>
-            <h2 id="pokemonName"></h2>
-            <i class="fa-solid fa-arrow-right" id="next"></i>
-          </div>
-          <div class="cards" id="main"></div>
-        </div>
-      </section>
-      <!-- compare Container -->
-      <section id="comparePokemonContainer">
-        <div class="firstPokemon">
-          <h3 id="firstPokemonName">Name</h3>
-          <div id="firstPokemonContainer"></div>
-        </div>
-        <div class="secondPokemon">
-          <h3 id="secondPokemonName">Name</h3>
-          <div id="secondPokemonContainer"></div>
-        </div>
-      </section>
-      <!-- avout Container -->
-      <section id="aboutContainer"></section>
-      <section id="gameContainer">
-        <aside id="gameAside">
-          <h3>Games</h3>
-          <ul>
-            <li id="quiz">Quiz</li>
-            <li id="cardShufle">type match</li>
-            <li id="mazeGame">Maze game</li>
-            <li id="snakeGame">snake game</li>
-          </ul>
-        </aside>
-        <div id="gameAsideToggle">menu</div>
-        <div id="game-wrapper"></div>
-      </section>
+      </div>
     </div>
 
     <script type="module" src="main.js"></script>
