Enhance dark mode toggle functionality and update button icons

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           <button id="compare">Compare</button>
           <button id="about">Login</button>
         </div>
-        <button id="mode">
-          <i class="fa-solid fa-circle-half-stroke"></i>
+        <button id="mode"><i class="fa-solid fa-sun"></i>
         </button>
       </div>
       <div class="mainContainerWrapper">
