Refactor layout structure and styles for search and card components

--- a/index.html
+++ b/index.html
@@ -69,8 +69,39 @@
         <div class="mainContainer">
           <!---------------------------SEARCH CONTAINER------------------------------>
           <section id="searchContainer">
-            <!---------------------------ASIDE BAR------------------------------>
-            <div id="searchWrapper">
+           
+            <!---------------------------MAIN CONTAINER------------------------------>
+            <div class="cardContainer">
+              <div class="title">
+                <div id="asideMenuContainer">
+                  <div class="nav">
+                    <input type="checkbox" />
+                    <svg>
+                      <use xlink:href="#menu" />
+                      <use xlink:href="#menu" />
+                    </svg>
+                  </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+                    <symbol
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 100 56"
+                      id="menu"
+                    >
+                      <path
+                        d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4"
+                      />
+                    </symbol>
+                  </svg>
+                </div>
+                <p id="pokemonCount"></p>
+                <div class="search">
+                  <input type="text" placeholder="Search here" id="input" />
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+              </div>
+               <!---------------------------ASIDE BAR------------------------------>
+           <div class="searchAndCardWrapper">
+             <div id="searchWrapper">
               <h3>Menu</h3>
               <p id="legendary"><i class="fa-solid fa-crown"></i> Legendary</p>
               <p id="evolutionButton">
@@ -162,36 +193,8 @@
               </p>
               <ul id="movesContainer"></ul>
             </div>
-            <!---------------------------MAIN CONTAINER------------------------------>
-            <div class="cardContainer">
-              <div class="title">
-                <div id="asideMenuContainer">
-                  <div class="nav">
-                    <input type="checkbox" />
-                    <svg>
-                      <use xlink:href="#menu" />
-                      <use xlink:href="#menu" />
-                    </svg>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-                    <symbol
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 100 56"
-                      id="menu"
-                    >
-                      <path
-                        d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4"
-                      />
-                    </symbol>
-                  </svg>
-                </div>
-                <p id="pokemonCount"></p>
-                <div class="search">
-                  <input type="text" placeholder="Search here" id="input" />
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-              </div>
               <div id="cards"></div>
+           </div>
               <div id="evolutionContainer">
                 <button id="closeEvolutionBtn">X</button>
                 <h3>Evolution Line</h3>
